compose/celery-worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: celery-worker
  name: celery-worker
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: celery-worker
    spec:
      containers:
      - args:
        - celery
        - -A
        - config
        - worker
        - -l
        - info
        - -c
        - "1"
        image: grandchallenge/web:2097-eyra-master
        name: celery-worker
        resources: {}
      restartPolicy: Always
status: {}
