compose/flower-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: flower
  name: flower
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: flower
    spec:
      containers:
      - env:
        - name: CELERY_BROKER_URL
          value: redis://redis:6379/0
        image: crgwbr/docker-celery-flower
        name: flower
        ports:
        - containerPort: 5555
        resources: {}
      restartPolicy: Always
status: {}
