compose/memcached-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: memcached
  name: memcached
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: memcached
    spec:
      containers:
      - image: memcached:1.4
        name: memcached
        resources: {}
      restartPolicy: Always
status: {}
