compose/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    app: redis
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
        io.kompose.service: redis
    spec:
      containers:
      - args:
        - redis-server
        - --appendonly
        - "yes"
        image: redis:4.0
        name: redis
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: redis-claim0
      restartPolicy: Always
      volumes:
      - name: redis-claim0
        persistentVolumeClaim:
          claimName: redis-claim0
status: {}
