compose/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    app: web
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
        io.kompose.service: web
    spec:
      containers:
      - args:
        - bash
        - -c
        - ' gunicorn -w 4 -b 0.0.0.0 config.wsgi '
        image: grandchallenge/web:2097-eyra-master
        #        livenessProbe:
        # exec:
        #   command:
        #   - curl http://web:8000/ || exit 1
        # failureThreshold: 5
        # periodSeconds: 10
        # timeoutSeconds: 5
        name: web
        resources: {}
        #volumeMounts:
        #- mountPath: /static/
        #  name: static-claim0
      restartPolicy: Always
      #      volumes:
      #- name: static-claim0
      #  persistentVolumeClaim:
      #    claimName: static-claim0
status: {}
