compose/postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  selector:
    name: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
