compose/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.staging.eyrabenchmark.net
    secretName: web-ingress-letsencrypt
  rules:
  - host: api.staging.eyrabenchmark.net
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 8000
